# kvdb

./: .gitignore  .gitmodules  CMakeLists.txt  EXAMPLES.md  EXAMPLES.objc.md  LICENSE  README.md
build-mac/kvdb.xcodeproj/: project.pbxproj
build-mac/kvdbtest/: main.c
objc/: KVDBTypes.h  KVDatabase.h  KVDatabase.m  KVIndexer.h  KVIndexer.m  KVOrderedDatabase.h  KVOrderedDatabase.m
src/: CMakeLists.txt  ConvertUTF.h  ConvertUTFNamespace.h  kvassert.c  kvassert.h  kvblock.c  kvblock.cpp  kvblock.h  kvbloom.h  kvdb-types.h  kvdb.c  kvdb.cpp  kvdb.h  kvdbo.cpp  kvdbo.h  kvendian.h  kvmurmurhash.h  kvpaddingutils.h  kvprime.c  kvprime.h  kvserialization.cpp  kvserialization.h  kvtable.c  kvtable.cpp  kvtable.h  kvtypes.h  kvunicode.c  kvunicode.h  sfts.cpp  sfts.h
test/: test-lidx.cpp
